# slurm-map

./: .gitignore  README.md  example.py  pyproject.toml
slurm_map/: __init__.py  slurm_map.py  utils.py
src/: __init__.py  slurm_map.py  utils.py
